[package]
name = "bitcrystal"
version = "0.1.0"
edition = "2021"

[dependencies]
urlencoding = "2.1.0"
sha-1 = "0.10.0"
reqwest = "0.11.9"
tokio = { version = "1.17.0", features = ["full", "tracing", "io-util"] }
tokio-stream = "0.1.8"
tokio-util = { version = "0.7.0", features = ["io", "codec"] }
futures = "0.3.21"
rand = "0.8.5"
byteorder = "1.4.3"
bytes = "1.1.0"
clap = { version = "3.1.6", features = ["derive", "regex"] }
derive_builder = "0.10.2"
regex = "1.5.5"
tracing = "0.1.31"
tracing-subscriber = { version = "0.3.9", features = ["std", "local-time", "fmt", "ansi"] }
tracing-appender = "0.2.1"
tracing-futures = "0.2.5"
console-subscriber = "0.1.3"
async-stream = "0.3.2"
